--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId></groupId>
-    <artifactId></artifactId>
+    <groupId>leanderk.izou.dontwakemeup</groupId>
+    <artifactId>dontwakemeup</artifactId>
     <packaging>jar</packaging>
-    <version></version>
+    <version>0.5-SNAPSHOT</version>
     <name></name>
 
     <properties>
-        <plugin.id></plugin.id>
+        <plugin.id>leanderk.izou.dontwakemeup</plugin.id>
         <plugin.class>path.to.the.ZipFileManager</plugin.class>
-        <plugin.version></plugin.version>
-        <plugin.provider></plugin.provider>
+        <plugin.version>0.5</plugin.version>
+        <plugin.provider>Leander Kurscheidt</plugin.provider>
         <plugin.dependencies />
-        <repo.name></repo.name>
-        <repo.owner></repo.owner>
+        <repo.name>IzouDontWakeMeUp</repo.name>
+        <repo.owner>LeanderK</repo.owner>
         <!-- github server corresponds to entry in ~/.m2/settings.xml -->
         <github.global.server>github</github.global.server>
     </properties>
