--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <groupId>leanderk.izou.dontwakemeup</groupId>
     <artifactId>dontwakemeup</artifactId>
     <packaging>jar</packaging>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.9-SNAPSHOT</version>
     <name></name>
 
     <properties>
         <plugin.id>leanderk.izou.dontwakemeup</plugin.id>
-        <plugin.class>path.to.the.ZipFileManager</plugin.class>
-        <plugin.version>0.5</plugin.version>
+        <plugin.class>leanderk.izou.dontwakemeup.ZipFileManager</plugin.class>
+        <plugin.version>0.9</plugin.version>
         <plugin.provider>Leander Kurscheidt</plugin.provider>
         <plugin.dependencies />
         <repo.name>IzouDontWakeMeUp</repo.name>
@@ -26,7 +26,13 @@
         <dependency>
             <groupId>intellimate.izou</groupId>
             <artifactId>Izou</artifactId>
-            <version>0.9.9.9-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
