--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <groupId>leanderk.izou.dontwakemeup</groupId>
     <artifactId>dontwakemeup</artifactId>
     <packaging>jar</packaging>
-    <version>0.9-SNAPSHOT</version>
-    <name></name>
+    <version>1.0</version>
+    <name>Izou, don't wake me up!</name>
 
     <properties>
         <plugin.id>leanderk.izou.dontwakemeup</plugin.id>
         <plugin.class>leanderk.izou.dontwakemeup.ZipFileManager</plugin.class>
-        <plugin.version>0.9</plugin.version>
+        <plugin.version>1.0</plugin.version>
         <plugin.provider>Leander Kurscheidt</plugin.provider>
         <plugin.dependencies />
         <repo.name>IzouDontWakeMeUp</repo.name>
@@ -24,9 +24,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>intellimate.izou</groupId>
-            <artifactId>Izou</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.intellimate.izou</groupId>
+            <artifactId>sdk</artifactId>
+            <version>[0.5.0, 1.0.0)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -35,17 +35,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>Izou</id>
-            <url>https://raw.github.com/intellimate/Izou/mvn-repo/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <distributionManagement>
         <repository>
